@@ -214,6 +214,23 @@ aprxlog @VARLOG@/aprx.log
 #
 </beacon>
 
+# ***********  <telemetry>  definition(s) follow   *********
+#
+# The system will always send telemetry for all of its interfaces
+# to APRSIS, but there is an option to define telemetry to be sent
+# to radio channel by using following sections for each transmitter
+# that is wanted to send out the telemetry.
+#
+#   transmitter   -  callsign referring to <interface>
+#   via           -  optional via-path, only 1 callsign!
+#   source        -  one or more of <interface> callsigns for which
+#                    the telemetry transmission is wanted for
+#
+#<telemetry>
+#	transmitter	$mycall
+#	via		TRACE1-1
+#	source		$mycall
+#</telemetry>
 
 # ***********  <digipeater>  definition(s) follow   *********
 #
